Minor fixes and configuration updates